--- a/src/main/webapp/css/12_lead.css
+++ b/src/main/webapp/css/12_lead.css
@@ -281,3 +281,15 @@ div.wlAnnotationTable thead tr th:nth-child(2) {
     padding-left: 5px;
     padding-right: 11px;
 }
+
+img.transferFileMessage{
+	width: 50px;
+	margin-top: 10px;
+	position: absolute;
+	left: 64px;
+}
+
+span.transferFileMessage{
+	position: relative;
+	top: 75px;
+}
